update player ui